k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80          # Puerto público
      targetPort: 8080  # Puerto interno en el contenedor
